[gd_scene load_steps=17 format=2]

[ext_resource path="res://art/background 2.png" type="Texture" id=1]
[ext_resource path="res://scenes/Top_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/bot_ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/grid.gd" type="Script" id=4]
[ext_resource path="res://scenes/Sinker.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/ice_holder.gd" type="Script" id=6]
[ext_resource path="res://scripts/lock_holder.gd" type="Script" id=7]
[ext_resource path="res://scripts/concrete_holder.gd" type="Script" id=8]
[ext_resource path="res://scripts/slime_holder.gd" type="Script" id=9]
[ext_resource path="res://scenes/GameOverPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/GameWinScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/goal_holder.gd" type="Script" id=13]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=14]
[ext_resource path="res://pieces/Blue Piece.png" type="Texture" id=15]
[ext_resource path="res://art/Pieces/red_piece.png" type="Texture" id=16]

[node name="Game_window" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="top_ui" parent="." instance=ExtResource( 2 )]

[node name="bot_ui" parent="." instance=ExtResource( 3 )]

[node name="grid" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 4 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = -2
piece_value = 10
current_counter_value = 30
max_score = 1500
is_moves = true
preset_spaces = PoolVector3Array( 0, 0, 0, 1, 0, 0, 2, 0, 1, 3, 0, 0, 4, 0, 0, 0, 1, 1, 1, 1, 1, 2, 1, 0, 3, 1, 1, 4, 1, 1 )
sinker_piece = ExtResource( 5 )

[node name="Timer" type="Timer" parent="grid"]

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="concrete_holder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="slime_holder" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GameOverPanel" parent="." instance=ExtResource( 10 )]

[node name="GameWinScreen" parent="." instance=ExtResource( 11 )]

[node name="Pause" parent="." instance=ExtResource( 12 )]

[node name="goal_holder" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Goal" parent="goal_holder" instance=ExtResource( 14 )]
goal_texture = ExtResource( 15 )
max_needed = 25
goal_string = "blue"

[node name="Goal2" parent="goal_holder" instance=ExtResource( 14 )]
goal_texture = ExtResource( 16 )
max_needed = 20
goal_string = "pink"
[connection signal="pause_menu" from="bot_ui" to="Pause" method="_on_bot_ui_pause_menu"]
[connection signal="check_goal" from="grid" to="top_ui" method="_on_grid_check_goal"]
[connection signal="check_goal" from="grid" to="goal_holder" method="_on_grid_check_goal"]
[connection signal="damage_concrete" from="grid" to="concrete_holder" method="_on_grid_damage_concrete"]
[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="damage_lock" from="grid" to="lock_holder" method="_on_grid_damage_lock"]
[connection signal="damage_slime" from="grid" to="slime_holder" method="_on_grid_damage_slime"]
[connection signal="game_over" from="grid" to="GameOverPanel" method="_on_grid_game_over"]
[connection signal="make_concrete" from="grid" to="concrete_holder" method="_on_grid_make_concrete"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="make_lock" from="grid" to="lock_holder" method="_on_grid_make_lock"]
[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]
[connection signal="setup_max_score" from="grid" to="top_ui" method="_on_grid_setup_max_score"]
[connection signal="update_count" from="grid" to="top_ui" method="_on_grid_update_count"]
[connection signal="update_score" from="grid" to="top_ui" method="_on_grid_update_score"]
[connection signal="timeout" from="grid/Timer" to="grid" method="_on_Timer_timeout"]
[connection signal="break_ice" from="ice_holder" to="top_ui" method="_on_ice_holder_break_ice"]
[connection signal="break_ice" from="ice_holder" to="goal_holder" method="_on_ice_holder_break_ice"]
[connection signal="remove_lock" from="lock_holder" to="grid" method="_on_lock_holder_remove_lock"]
[connection signal="remove_concrete" from="concrete_holder" to="grid" method="_on_concrete_holder_remove_concrete"]
[connection signal="remove_slime" from="slime_holder" to="grid" method="_on_slime_holder_remove_slime"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
[connection signal="create_goal" from="goal_holder" to="top_ui" method="_on_goal_holder_create_goal"]
[connection signal="game_won" from="goal_holder" to="grid" method="_on_goal_holder_game_won"]
[connection signal="game_won" from="goal_holder" to="GameWinScreen" method="_on_goal_holder_game_won"]
